--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styl.css" />
     <title>Git4</title>
   </head>
   <body>
     <h2>Git Branching</h2>
+    <footer class="footer_box">
+      <p>About</p>
+      <p>Contact Us</p>
+    </footer>
   </body>
 </html>
