i added a javascript file and p tag

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h2>Git Branching</h2>
+    <p>My name is Stanley Daniel</p>
+
+    <script src="stanleydaniel.js"></script>
   </body>
 </html>
