Prince added his name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git4</title>
+    <link rel="stylesheet" href="styl.css">
   </head>
-  <body>
-    <h2>Git Branching</h2>
+  <body>    
+    <h2 class="a">Git Branching</h2>
+    <p class="b">My name is Prince</p>
+    <script src="script.js"></script>
   </body>
 </html>
